--- a/catalog.html
+++ b/catalog.html
@@ -1,10 +1,10 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research Compound Catalog</title>
-  <link rel="stylesheet" href="css/styles.css?v=2">
+  <link rel="stylesheet" href="css/styles.css?v=3" />
 </head>
 
 <body>
@@ -42,21 +42,15 @@
 <!-- CART DRAWER -->
 <div id="cartDrawer" class="cart-drawer">
   <h2>Your Cart</h2>
-
   <div id="cartItems"></div>
-
   <h3 id="cartTotal">Total: $0</h3>
-
-  <button id="checkoutBtn" class="btn">
-    Proceed to Checkout
-  </button>
+  <button id="checkoutBtn" class="btn">Proceed to Checkout</button>
 </div>
 
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
 
-<!-- ONLY LOAD CATALOG LOGIC -->
 <script type="module" src="js/catalog.js"></script>
 
 </body>
