--- a/index.html
+++ b/index.html
@@ -16,17 +16,17 @@
       <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
 
-    <ul class="nav-links">
-      <li><a href="catalog.html">Catalog</a></li>
-      <li><a href="orders.html">Orders</a></li>
+<ul class="nav-links">
+  <li><a href="catalog.html">Catalog</a></li>
+  <li><a href="orders.html">Orders</a></li>
 
-      <li id="cartIcon" style="position:relative; cursor:pointer;">
-        🛒
-        <span id="cartBadge">0</span>
-      </li>
+  <li id="cartIcon">
+    🛒
+    <span id="cartBadge">0</span>
+  </li>
 
-      <li id="logoutBtn" style="cursor:pointer;">Logout</li>
-    </ul>
+  <li id="logoutBtn">Logout</li>
+</ul>
 
   </div>
 </header>
