--- a/orders.html
+++ b/orders.html
@@ -37,6 +37,7 @@
   © 2026 NeoStep. Research use only.
 </footer>
 
+<script type="module" src="js/script.js"></script>
 <script type="module" src="js/orders.js"></script>
 </body>
 </html>
