--- a/catalog.html
+++ b/catalog.html
@@ -4,7 +4,7 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Research Compound Catalog</title>
-  <link rel="stylesheet" href="css/styles.css?v=4" />
+  <link rel="stylesheet" href="css/styles.css?v=6" />
 </head>
 
 <body>
@@ -17,15 +17,15 @@
     </a>
 
     <ul class="nav-links">
-      <li><a href="catalog.html">Catalog</a></li>
-      <li><a href="account.html">Orders</a></li>
+      <li><a href="catalog.html" class="active">Catalog</a></li>
+      <li><a href="account.html">Account</a></li>
 
-      <li id="cartIcon" style="position:relative; cursor:pointer;">
+      <li id="cartIcon">
         🛒
         <span id="cartBadge">0</span>
       </li>
 
-      <li id="logoutBtn" style="cursor:pointer;">Logout</li>
+      <li id="logoutBtn">Logout</li>
     </ul>
 
   </div>
