--- a/complete-profile.html
+++ b/complete-profile.html
@@ -4,103 +4,53 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>Complete Profile | NeoStep</title>
-  <link rel="stylesheet" href="css/styles.css?v=8" />
+  <link rel="stylesheet" href="css/styles.css?v=6" />
 </head>
+
 <body>
 
 <header class="navbar">
   <div class="nav-container">
+
     <a href="catalog.html">
       <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
+
+    <ul class="nav-links">
+      <li><a href="catalog.html">Catalog</a></li>
+      <li><a href="account.html">Account</a></li>
+
+      <li id="cartIcon">
+        🛒
+        <span id="cartBadge">0</span>
+      </li>
+
+      <li id="logoutBtn">Logout</li>
+    </ul>
+
   </div>
 </header>
 
 <main>
+  <h1>Complete Your Profile</h1>
 
-<h1>Complete Your Profile</h1>
+  <input type="text" id="phone" placeholder="Phone Number">
+  <input type="text" id="address1" placeholder="Address Line 1">
+  <input type="text" id="address2" placeholder="Address Line 2 (Optional)">
+  <input type="text" id="city" placeholder="City">
 
-<div class="profile-card">
-
-  <label>Address Line 1</label>
-  <input type="text" id="address1" required />
-
-  <label>Address Line 2 (Optional)</label>
-  <input type="text" id="address2" />
-
-  <label>City</label>
-  <input type="text" id="city" required />
-
-  <label>State</label>
-  <select id="state" required>
+  <select id="state">
     <option value="">Select State</option>
-    <option value="AL">Alabama</option>
-    <option value="AK">Alaska</option>
-    <option value="AZ">Arizona</option>
-    <option value="AR">Arkansas</option>
-    <option value="CA">California</option>
-    <option value="CO">Colorado</option>
-    <option value="CT">Connecticut</option>
-    <option value="DE">Delaware</option>
-    <option value="FL">Florida</option>
-    <option value="GA">Georgia</option>
-    <option value="HI">Hawaii</option>
-    <option value="ID">Idaho</option>
-    <option value="IL">Illinois</option>
-    <option value="IN">Indiana</option>
-    <option value="IA">Iowa</option>
-    <option value="KS">Kansas</option>
-    <option value="KY">Kentucky</option>
-    <option value="LA">Louisiana</option>
-    <option value="ME">Maine</option>
-    <option value="MD">Maryland</option>
-    <option value="MA">Massachusetts</option>
-    <option value="MI">Michigan</option>
-    <option value="MN">Minnesota</option>
-    <option value="MS">Mississippi</option>
-    <option value="MO">Missouri</option>
-    <option value="MT">Montana</option>
-    <option value="NE">Nebraska</option>
-    <option value="NV">Nevada</option>
-    <option value="NH">New Hampshire</option>
-    <option value="NJ">New Jersey</option>
-    <option value="NM">New Mexico</option>
-    <option value="NY">New York</option>
-    <option value="NC">North Carolina</option>
-    <option value="ND">North Dakota</option>
-    <option value="OH">Ohio</option>
-    <option value="OK">Oklahoma</option>
-    <option value="OR">Oregon</option>
-    <option value="PA">Pennsylvania</option>
-    <option value="RI">Rhode Island</option>
-    <option value="SC">South Carolina</option>
-    <option value="SD">South Dakota</option>
-    <option value="TN">Tennessee</option>
-    <option value="TX">Texas</option>
-    <option value="UT">Utah</option>
-    <option value="VT">Vermont</option>
-    <option value="VA">Virginia</option>
-    <option value="WA">Washington</option>
-    <option value="WV">West Virginia</option>
-    <option value="WI">Wisconsin</option>
-    <option value="WY">Wyoming</option>
   </select>
 
-  <label>ZIP Code</label>
-  <input type="text" id="zip" required />
+  <input type="text" id="zip" placeholder="ZIP Code">
 
-  <label>Phone Number</label>
-  <input type="text" id="phone" required />
+  <label style="display:block;margin-top:20px;">
+    Do you have a referral code?
+  </label>
+  <input type="text" id="referralInput" placeholder="Enter Referral Code (Optional)">
 
-  <hr style="margin:25px 0;">
-
-  <label>Do you have a referral code?</label>
-  <input type="text" id="referralInput" placeholder="Enter referral code (optional)" />
-
-  <button id="saveProfile" class="btn">Save & Continue</button>
-
-</div>
-
+  <button id="saveProfile" class="btn">Save Profile</button>
 </main>
 
 <footer class="footer">
@@ -108,6 +58,5 @@
 </footer>
 
 <script type="module" src="js/complete-profile.js"></script>
-
 </body>
 </html>
