--- a/index.html
+++ b/index.html
@@ -5,59 +5,57 @@
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>NeoStep Secure Portal</title>
   <link rel="stylesheet" href="css/styles.css?v=7" />
-  <link href="https://fonts.googleapis.com/css2?family=Inter:wght@400;600;700&display=swap" rel="stylesheet">
 </head>
-
 <body>
 
 <header class="navbar">
   <div class="nav-container">
-
-    <a href="catalog.html">
+    <a href="#">
       <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
-
-    <ul class="nav-links">
-      <li><a href="catalog.html">Catalog</a></li>
-      <li><a href="account.html">Account</a></li>
-
-      <li id="cartIcon">
-        🛒
-        <span id="cartBadge">0</span>
-      </li>
-
-      <li id="logoutBtn">Logout</li>
-    </ul>
-
   </div>
 </header>
 
-<main id="content">
+<main>
 
-  <section class="hero">
-    <h1>NeoStep Secure Research Portal</h1>
-    <p>Verified laboratory access only.</p>
-  </section>
+  <div class="auth-card">
 
-  <section class="auth-section" id="authSection">
-    <h2>Login / Register</h2>
+    <h2>Secure Laboratory Access</h2>
 
     <input type="email" id="email" placeholder="Email">
     <input type="password" id="password" placeholder="Password">
 
-    <div class="auth-buttons">
-      <button id="registerBtn">Register</button>
-      <button id="loginBtn">Login</button>
-    </div>
+    <button id="loginBtn">Login</button>
+    <button id="registerBtn" style="margin-top:10px;">Register</button>
 
-  </section>
+  </div>
 
 </main>
+
+<!-- VERIFICATION MODAL -->
+<div id="verificationModal" class="modal-overlay" style="display:none;">
+
+  <div class="modal-card">
+    <h3>Email Verification Required</h3>
+    <p>
+      We sent a verification link to:
+    </p>
+    <p class="modal-email" style="font-weight:600;"></p>
+    <p>
+      Please verify your email to access the portal.
+    </p>
+
+    <button id="resendVerification">Resend Email</button>
+
+  </div>
+
+</div>
 
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
 
 <script type="module" src="js/script.js"></script>
+
 </body>
 </html>
