--- a/catalog.html
+++ b/catalog.html
@@ -2,13 +2,10 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8" />
-  <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no">
+  <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Research Compound Catalog</title>
-
-  <!-- Cache Busted CSS -->
-  <link rel="stylesheet" href="css/styles.css?v=8" />
+  <link rel="stylesheet" href="css/styles.css?v=7" />
 </head>
-
 <body>
 
 <header class="navbar">
@@ -19,7 +16,7 @@
     </a>
 
     <ul class="nav-links">
-      <li><a href="catalog.html">Catalog</a></li>
+      <li><a href="catalog.html" class="active">Catalog</a></li>
       <li><a href="account.html">Account</a></li>
 
       <li id="cartIcon" style="position:relative; cursor:pointer;">
@@ -35,33 +32,22 @@
 
 <main>
   <h1>Research Compound Catalog</h1>
-
-  <!-- PRODUCTS -->
   <div id="productContainer" class="product-grid"></div>
 </main>
 
-<!-- CART OVERLAY -->
 <div id="cartOverlay" class="cart-overlay"></div>
 
-<!-- CART DRAWER -->
 <div id="cartDrawer" class="cart-drawer">
   <h2>Your Cart</h2>
-
   <div id="cartItems"></div>
-
   <h3 id="cartTotal">Total: $0</h3>
-
-  <button id="checkoutBtn" class="btn">
-    Proceed to Checkout
-  </button>
+  <button id="checkoutBtn" class="btn">Proceed to Checkout</button>
 </div>
 
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
 
-<!-- Cache Busted JS -->
-<script type="module" src="js/catalog.js?v=8"></script>
-
+<script type="module" src="js/catalog.js"></script>
 </body>
 </html>
