--- a/complete-profile.html
+++ b/complete-profile.html
@@ -4,13 +4,13 @@
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0"/>
   <title>Complete Profile</title>
-  <link rel="stylesheet" href="./css/styles.css"/>
+  <link rel="stylesheet" href="css/styles.css"/>
 </head>
 <body>
 
 <nav class="navbar">
   <div class="nav-container">
-    <img src="neostep-logo-header.png" class="header-logo" />
+    <img src="assets/logo/neostep-logo-header.png" class="header-logo" />
   </div>
 </nav>
 
