--- a/complete-profile.html
+++ b/complete-profile.html
@@ -10,7 +10,7 @@
 
 <nav class="navbar">
   <div class="nav-container">
-    <img src="assets/logo/neostep-logo-header.png" class="header-logo" />
+    <img src="assets/logo/neostep-logo-header.jpg" class="header-logo" />
   </div>
 </nav>
 
