Change save button to type 'button'

--- a/complete-profile.html
+++ b/complete-profile.html
@@ -39,7 +39,7 @@
 
       </div>
 
-      <button id="saveProfileBtn" class="btn profile-btn">
+      <button id="saveProfileBtn" type="button">Save</button>
         Save Profile
       </button>
 
