Update script source and button text in profile page

--- a/complete-profile.html
+++ b/complete-profile.html
@@ -39,7 +39,7 @@
 
       </div>
 
-      <button id="saveProfileBtn" type="button">Save</button>
+      <button id="saveProfileBtn" type="button">
         Save Profile
       </button>
 
@@ -51,7 +51,7 @@
   </footer>
 
   <!-- Script -->
-  <script type="module" src="complete-profile.js"></script>
+  <script type="module" src="js/complete-profile.js"></script>
 
 </body>
 </html>
