Restore authentication logic to login page

--- a/index.html
+++ b/index.html
@@ -48,7 +48,7 @@
 </footer>
 
 <!-- IMPORTANT: Auth logic -->
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/account.js"></script>
 <script type="module" src="js/navbar.js"></script>
 
 </body>
