Restore correct Firebase API configuration

--- a/index.html
+++ b/index.html
@@ -27,6 +27,6 @@
 
 <footer class="footer">© 2026 NeoStep. Research use only.</footer>
 
-<script type="module" src="js/auth.js"></script>
+<script type="module" src="js/script.js"></script>
 </body>
 </html>
