Fix login input ID mismatch

--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 <main class="auth-container">
   <div class="auth-card">
     <h1>Secure Laboratory Access</h1>
-    <input type="email" id="loginEmail" placeholder="Email">
-    <input type="password" id="loginPassword" placeholder="Password">
-    <button class="btn" id="loginBtn">Login</button>
+<input type="email" id="email" placeholder="Email">
+<input type="password" id="password" placeholder="Password">
+<button class="btn" id="loginBtn">Login</button>
   </div>
 </main>
 
