Remove catalog script from profile page

--- a/account.html
+++ b/account.html
@@ -38,8 +38,7 @@
 <footer class="footer">
   © 2026 NeoStep. Research use only.
 </footer>
-
+<script type="module" src="js/account.js"></script>
 <script type="module" src="js/navbar.js"></script>
-<script type="module" src="js/catalog.js"></script>
 </body>
 </html>
