Clean hover dropdown navbar with admin badge styling

--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
 <header class="navbar">
   <div class="nav-container">
     <a href="catalog.html">
-      <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
+      <img src="assets/logo/neostep-logo-header.png" class="header-logo">
     </a>
 
     <div class="nav-right">
@@ -18,17 +18,21 @@
 
       <div class="dropdown">
         <button class="dropdown-toggle">Account ▾</button>
+
         <div class="dropdown-menu">
           <a href="account.html">Profile</a>
+
           <a href="admin.html" id="adminLink" style="display:none;">
             Dashboard <span class="admin-badge">ADMIN</span>
           </a>
+
           <a href="#" id="logoutBtn">Logout</a>
         </div>
       </div>
     </div>
   </div>
 </header>
+
 
 <main>
 
