--- a/catalog.html
+++ b/catalog.html
@@ -12,23 +12,29 @@
 <header class="navbar">
   <div class="nav-container">
     <a href="catalog.html">
-      <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
+      <img src="assets/logo/neostep-logo-header.png" class="header-logo">
     </a>
-    <ul class="nav-links">
-      <li><a href="catalog.html" class="active">Catalog</a></li>
-      <li class="dropdown">
-        <a href="#">Account ▾</a>
+
+    <div class="nav-right">
+      <a href="catalog.html" class="nav-link">Catalog</a>
+
+      <div class="dropdown">
+        <button class="dropdown-toggle">Account ▾</button>
+
         <div class="dropdown-menu">
           <a href="account.html">Profile</a>
+
           <a href="admin.html" id="adminLink" style="display:none;">
             Dashboard <span class="admin-badge">ADMIN</span>
           </a>
+
           <a href="#" id="logoutBtn">Logout</a>
         </div>
-      </li>
-    </ul>
+      </div>
+    </div>
   </div>
 </header>
+
 
 <main>
   <h1>Research Compound Catalog</h1>
