Stabilize account dropdown hover behavior

--- a/account.html
+++ b/account.html
@@ -10,7 +10,7 @@
 <header class="navbar">
   <div class="nav-container">
     <a href="catalog.html">
-      <img src="assets/logo/neostep-logo-header.png" class="header-logo">
+      <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
 
     <div class="nav-right">
