--- a/admin.html
+++ b/admin.html
@@ -13,7 +13,7 @@
 <header class="navbar">
   <div class="nav-container">
     <a href="catalog.html">
-      <img src="assets/logo/neostep-logo-header.png" class="header-logo">
+      <img src="assets/logo/neostep-logo-header.jpg" class="header-logo">
     </a>
 
     <div class="nav-right">
