--- a/index.html
+++ b/index.html
@@ -17,12 +17,22 @@
 </header>
 
 <main class="auth-container">
-  <div class="auth-card">
-    <h1>Secure Laboratory Access</h1>
-<input type="email" id="email" placeholder="Email">
-<input type="password" id="password" placeholder="Password">
-<button class="btn" id="loginBtn">Login</button>
+<div class="auth-card">
+  <h1>Secure Laboratory Access</h1>
+
+  <input type="email" id="email" placeholder="Email">
+  <input type="password" id="password" placeholder="Password">
+
+  <button class="btn" id="loginBtn">Login</button>
+
+  <div style="margin:15px 0; text-align:center; color:#6b7280;">
+    — or —
   </div>
+
+  <button class="btn" id="registerBtn" style="background:#111827;">
+    Create Account
+  </button>
+</div>
 </main>
 
 <footer class="footer">© 2026 NeoStep. Research use only.</footer>
