--- a/admin-tools.html
+++ b/admin-tools.html
@@ -41,6 +41,7 @@
 
 </main>
 
+<script type="module" src="js/navbar.js"></script>
 <script type="module" src="js/admin-tools.js"></script>
 </body>
 </html>
